[package]
name = "shadrr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.9.3"
log = "0.4.17"
pollster = "0.2.5"
wgpu = "0.14.0"
winit = "0.27.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.14", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[target.'cfg(target_arch = "x86_64")'.dependencies]
shaderc = "0.8.0"
